# Mojave-Chess-Engine

./: .gitignore  CMakeLists.txt  README.md  build_with_vcpkg.sh  install.sh  makefile  vcpkg.json  vcpkg_install_dependencies.sh
doc/: changelog.md  todo.md
src/: Bitboard.cpp  Bitboard.h  Bitboard.hpp  BoardConcepts.cpp  BoardConcepts.h  BoardConcepts.hpp  Chessboard.cpp  Chessboard.h  Chessboard.hpp  ChessboardBoardManipulation.cpp  ChessboardDisplay.cpp  ChessboardFen.cpp  ChessboardMoveGeneration.cpp  ChessboardSearch.cpp  ChessboardZobrist.cpp  Engine.cpp  Eval.cpp  Eval.h  Evaluation.cpp  Interface.cpp  Interface.h  Interface.hpp  InterfaceCLI.cpp  InterfaceUCI.cpp  Moves.cpp  Moves.h  Moves.hpp  Search.cpp  Search.h  main.cpp  uci.cpp  uci.h
tests/: bitboard.cpp  bitboard_test.cpp  boardconcepts_test.cpp
tests/benchmark/: main.cpp  moves_benchmark.cpp
tests/unit_tests/: bitboard_test.cpp  boardconcepts_test.cpp  chessboard_test.cpp  main.cpp
